styles/globals.css
/* ... */
.custom-row-margin {
    margin: 0;
}
.custom-error-form{

}
.custom-btn-height{
    height: 50px;
    padding-top: 13px;
}
.custom-user-coverImage {
    width: auto;
    height: 350px;
    z-index: 5;
    margin-left: 50px;
    margin-right: 50px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

.custom-align-social-links {

}

.custom-user-profile-data {
    width: 500px;
    z-index: 9;
    position: relative;
    margin-top: 35%;
}

.custom-currentuser-profile-data {
    width: 500px;
    z-index: 9;
    position: relative;
    margin-top: 37%;
}

.custom-user-profile-data-spans-title {
    color: #ffffff;
    font-size: 16px;
    alignment: left;
}

.custom-user-profile-data-spans-counts {
    font-size: 12px;
    alignment: left;
    color: #00DAC8;
    padding-bottom: 10px;
    border-bottom: 1px solid #2C3744;
    position: relative;
}

.custom-user-profile-image {
    z-index: 10;
    position: absolute;
    bottom: 25%;
    left: 5%;
    border: 1px solid #ffffff;
}

.custom-profile-follow-btn {
    width: 100px;
    height: 30px;
    padding: 0 0 0 0;
    padding-top: 5px;
    align-content: center;
    align-items: center;
    text-align: center;
    font-size: 12px;
}

.custom-profile-username {
    font-size: 28px;
    font-weight: bold;
    color: #ffffff;
}

.custom-profile-edit {
    color: #A4A9AF;
    font-size: 12px;
}

.custom-user-data-section {
    width: 190px;
    margin-left: 8%;
}

.custom-currentuser-data-section {

}

.custom-track-list-bg {
    background: #0E1A2B;
    border-radius: 6px;
    height: auto;
}

.custom-user-tracklist-track-plays {
    color: #A4A9AF;
    font-size: 14px;
}

.custom-user-tracklist-track-title {
    font-size: 18px;
    font-weight: bold;
    color: #ffffff;
}

.custom-navbar-z-index {
    /*position: absolute;*/
    z-index: 15;
}

.mobile-view {
    visibility: hidden;
}

.mobile-user-profile-btns {

}

.custom-profile-options-row {
    margin: 0;
}

.custom-bg-dark {
    background: #2F4961;
}

.custom-file-input {
    width: 100%;
    height: 45px;
    padding-left: 40px;
    margin-bottom: 5px;
    box-sizing: border-box;
    box-shadow: none;
    border: 1px solid #00000020;
    border-radius: 50px;
    outline: none;
    background: transparent;
}

.custom-input-label {
    font-size: 20px;
    font-weight: bold;
    color: #ffffff;
}

.input-field-custom-info {
    color: #ffffff;
}

.custom-totalcoins-bg {
    background-image: url("../public/images/coins_gradient_bg.svg");
    height: 250px;
    border-radius: 6px;
    margin-left: 50px;
}

.custom-wallet-title span {
    color: #ffffff;
    font-size: 30px;
    font-weight: bold;
    margin-left: 50px;
}

.resize-disable {
    resize: none;
}
.streams-body-info{
    color: #FFFFFFE6;
    font-weight: bold;
    font-size: 18px;
    margin-left: 110px;
}
.custom-tweet-inputtext {
    background: #2C3744;
    color: #A4A9AF;
    border: 1px solid #2C3744;
}

.custom-how-to-use-digitvl-coins {
    background: #0E1A2B;
    border-radius: 6px;
    height: auto;
    min-height: 250px;
    margin-left: 50px;
}

.custom-margin-faqs {
    margin-top: 100px;
}

.custom-faqs-bg {
    background: #0E1A2B;
    border-radius: 6px;
    height: auto;
    min-height: 250px;
}

.custom-how-to-earn-coins {
    background: #0E1A2B;
    border-radius: 6px;
    height: auto;
    min-height: 250px;
    margin-left: 50px;
}

.custom-total-coins {
    color: #ffffff;
    font-size: 65px;
    font-weight: bold;
}

.custom-total-coins-title {
    font-size: 30px;
    color: #ffffff;
}

.custom-earn-title {
    color: #ffffff;
    font-weight: bold;
    font-size: 20px;
}

.custom-earn-sections {
    color: #A4A9AF;
    font-size: 14px;
    alignment: left;
}

.custom-earn-sections i {
    color: #00D1E5;
}

.form-input {
    position: relative;
}

.form-input .tags .tag-input {
    width: 100%;
    height: 45px;
    padding-left: 40px;
    margin-bottom: 20px;
    box-sizing: border-box;
    box-shadow: none;
    border: 1px solid #00000020;
    border-radius: 50px;
    outline: none;
    background: transparent;
}

.form-input input, .form-input select, .form-input textarea {
    width: 50%;
    height: 45px;
    padding-left: 40px;
    margin-bottom: 20px;
    box-sizing: border-box;
    box-shadow: none;
    font-size: 11px;
    border: 1px solid #00000020;
    border-radius: 10px;
    outline: none;
    background: transparent;
}
.custom-textarea-edit-page{
    width: 100%;
    height: 45px;
    padding-left: 40px;
    margin-bottom: 20px;
    box-sizing: border-box;
    box-shadow: none;
    border: 1px solid #00000020;
    border-radius: 10px;
    outline: none;
    background: transparent;
}

.form-input .inputfieldnew {
    width: 100%;
    height: auto;
    padding-left: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 20px;
    box-sizing: border-box;
    box-shadow: none;
    border: 1px solid #00DAC8;
    border-radius: 50px;
    outline: none;
    background: transparent;
}

.form-input .custom-file-input {
    width: 100%;
    height: 45px;
    padding-left: 40px;
    margin-bottom: 5px;
    box-sizing: border-box;
    box-shadow: none;
    border: 1px solid #00000020;
    border-radius: 50px;
    outline: none;
    background: transparent;
}

.form-input span {
    position: absolute;
    top: 10px;
    padding-left: 15px;
    color: #00DAC8;
}

.form-input input::placeholder {
    color: black;
    padding-left: 0px;
}

.form-input input:focus, .form-input input:valid, .form-input select:focus, .form-input select:valid, .form-input textarea:focus, .form-input textarea:valid {
    border: 2px solid #454b69;
}
.form-input input:focus::placeholder {
    color: #454b69;
}

.custom-checkbox .custom-control-input:checked ~ .custom-control-label:before {
    background: #00DAC8 !important;
    border: 0px;
}
/* ... */

